Added Test Case 2 for list users api call.

--- a/APIAutomation/test-output/old/Default suite/classes.html
+++ b/APIAutomation/test-output/old/Default suite/classes.html
@@ -14,6 +14,10 @@
 <td>SingleUser</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>ListUsers</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
