--- a/APIAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/APIAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="777aab">  <td>23/05/22 19:59:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.ReportSetup()[pri:0, instance:com.api.test.TestClass@22555ebf]">&gt;&gt;ReportSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
-<tr bgcolor="78a09f">  <td>23/05/22 19:59:13</td>   <td>221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.SingleUser()[pri:0, instance:com.api.test.TestClass@22555ebf]">SingleUser</td> 
-  <td>main@2106000623</td>   <td></td> </tr>
-<tr bgcolor="777aab">  <td>23/05/22 19:59:14</td>   <td>1751</td> <td title="&lt;&lt;BaseClass.closeReport()[pri:0, instance:com.api.test.TestClass@22555ebf]">&lt;&lt;closeReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
-<tr bgcolor="777aab">  <td>23/05/22 19:59:14</td>   <td>1602</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.endTest()[pri:0, instance:com.api.test.TestClass@22555ebf]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
-<tr bgcolor="777aab">  <td>23/05/22 19:59:14</td>   <td>1600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.getReport(org.testng.ITestResult)[pri:0, instance:com.api.test.TestClass@22555ebf]">&lt;&lt;getReport</td> 
-<td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
+<tr bgcolor="e199a4">  <td>23/05/22 21:55:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.ListUsers()[pri:0, instance:com.api.test.TestClass@c730b35]">ListUsers</td> 
+  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="b9a692">  <td>23/05/22 21:55:00</td>   <td>-196</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.ReportSetup()[pri:0, instance:com.api.test.TestClass@c730b35]">&gt;&gt;ReportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="e199a4">  <td>23/05/22 21:55:01</td>   <td>1283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.SingleUser()[pri:0, instance:com.api.test.TestClass@c730b35]">SingleUser</td> 
+  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="b9a692">  <td>23/05/22 21:55:01</td>   <td>1560</td> <td title="&lt;&lt;BaseClass.closeReport()[pri:0, instance:com.api.test.TestClass@c730b35]">&lt;&lt;closeReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="b9a692">  <td>23/05/22 21:55:01</td>   <td>1410</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.endTest()[pri:0, instance:com.api.test.TestClass@c730b35]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="b9a692">  <td>23/05/22 21:55:01</td>   <td>1404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.getReport(org.testng.ITestResult)[pri:0, instance:com.api.test.TestClass@c730b35]">&lt;&lt;getReport</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="b9a692">  <td>23/05/22 21:55:01</td>   <td>1404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.getReport(org.testng.ITestResult)[pri:0, instance:com.api.test.TestClass@c730b35]">&lt;&lt;getReport</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
 </table>
